--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,36 @@
 
 h1 {
   font-weight: 800;
+  font-size: 5rem;
+}
+
+h2 {
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 2rem;
+  letter-spacing: 5px;
+  color: #220b57;
+}
+
+h3 {
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 1.65rem;
+  letter-spacing: 5px;
+  color: #F1A617;
+}
+
+a.article-link {
+  color: #220b57;
+  font-weight: 800;
+  text-decoration: none;
+  &:hover {
+    opacity: 0.75;
+  }
+}
+
+.img-radius {
+  border-radius: 30px;
 }
 
 .navbar {
@@ -18,6 +48,9 @@ h1 {
   }
   .btn {
     font-size: 14px;
+    margin-right: 1rem;
+    margin-left: 1rem;
+    min-width: 75px;
   }
   .dropdown-item {
     font-size: 16px;
@@ -28,6 +61,10 @@ h1 {
   border-radius: 30px;
   padding: 0.5rem 1rem;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.btn.btn-secondary {
+  color: #ffffff;
 }
 
 .nav-logo {
@@ -67,20 +104,67 @@ h1 {
   }
 }
 
+.gss-page-nav {
+  color: #ffffff;
+  text-align: center;
+  background: #220b57;
+  border-radius: 50px;
+  overflow: hidden;
+  margin: 15px;
+
+  h1 {
+    padding: 15px;
+  }
+}
+
+.gss-page-container {
+  padding: 3rem 0;
+}
+
+.gss-page-head {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .gss-jumbo {
   position: relative;
   //background: url("/gss-jumbo.jpg") center center no-repeat;
   background-size: cover;
   padding: 160px 0;
 
-  h1 {
-    font-size: 5rem;
-  }
-
   .row {
     height: 100%;
     position: relative;
     z-index: 3;
+  }
+}
+
+#getstarted {
+  h2 {
+    font-size: 3rem;
+    font-weight: 700;
+  }
+}
+
+.footer {
+  background: #140634;
+  padding: 3rem 0;
+  ul {
+    padding: 0;
+    margin: 0;
+  }
+  li {
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 5px;
+  }
+  a {
+    color: #dddddd;
+    text-decoration: none;
+
+    &:hover {
+      opacity: 0.75;
+    }
   }
 }
 
@@ -90,14 +174,14 @@ h1 {
 
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) {
-  .gss-jumbo h1 {
+  h1 {
     font-size: 2.5rem;
   }
 }
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991.98px) {
-  .gss-jumbo h1 {
+  h1 {
     font-size: 3rem;
   }
 }
