--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,15 +13,15 @@ h2 {
   text-transform: uppercase;
   font-weight: 800;
   font-size: 2rem;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
   color: #220b57;
 }
 
 h3 {
   text-transform: uppercase;
   font-weight: 800;
-  font-size: 1.65rem;
-  letter-spacing: 5px;
+  font-size: 20px;
+  letter-spacing: 2px;
   color: #F1A617;
 }
 
