--- a/styles/main.scss
+++ b/styles/main.scss
@@ -69,6 +69,8 @@ a.article-link {
 
 .nav-logo {
   max-width: 350px;
+  width: 100%;
+  padding-right: 30px;
 }
 
 .nav-social {
@@ -238,6 +240,28 @@ a.article-link {
 @media (max-width: 767.98px) {
   h1 {
     font-size: 2.5rem;
+  }
+
+  .nav-logo {
+    max-width: 200px;
+    padding-left: 30px;
+  }
+
+  .gss-jumbo {
+    padding: 40px 15px;
+  }
+
+  .gss-homepage-bg, .gss-page-nav {
+    margin: 0 0 30px 0;
+    border-radius: 0;
+  }
+
+  .gss-page-container {
+    margin: 15px;
+  }
+
+  .gss-section {
+    padding: 2rem 1rem;
   }
 }
 
