--- a/styles/main.scss
+++ b/styles/main.scss
@@ -67,6 +67,11 @@ a.article-link {
   color: #ffffff;
 }
 
+.btn.btn-block {
+  width: 100%;
+  display: block;
+}
+
 .nav-logo {
   max-width: 350px;
   width: 100%;
@@ -263,6 +268,42 @@ a.article-link {
   .gss-section {
     padding: 2rem 1rem;
   }
+}
+
+#blog {
+  a.blog-title {
+    display: block;
+    font-size: 2.5rem;
+    text-decoration: none;
+    font-weight: 600;
+    color: #220b57;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+    margin-top: 0.5rem;
+  }
+}
+
+.section-container {
+  padding: 4rem 0;
+}
+
+.gs-link-container {
+  max-width: 680px;
+  margin: 30px auto;
+
+  .btn {
+    font-size: 1rem;
+  }
+}
+
+.link-image {
+  display: block;
+  background: url("/gss-logo-square.png") center center;
+  background-size: cover;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  margin: 15px auto;
 }
 
 // Medium devices (tablets, less than 992px)
