--- a/styles/main.scss
+++ b/styles/main.scss
@@ -429,8 +429,8 @@ a.gss-homepage-card {
   padding: 4rem 0;
 
   img {
-    max-width: 100%;
     width: 100%;
+    max-width: fit-content;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
   }
