--- a/styles/main.scss
+++ b/styles/main.scss
@@ -422,6 +422,16 @@ a.gss-homepage-card {
   }
 }
 
+a.blog-title {
+  font-size: 16px;
+  font-weight: 500;
+  color: #220b57;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;;
+  }
+}
+
 #blog {
   a.blog-title {
     display: block;
