--- a/styles/main.scss
+++ b/styles/main.scss
@@ -454,7 +454,7 @@ a.blog-title {
 
   img {
     width: 100%;
-    max-width: fit-content;
+    max-width: 400px;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
   }
